# dsw-km-translation-tool

./: .gitignore  Makefile  pyproject.toml  readme.md
docs/: README.md  architecture.md  command-reference.md  development-guidelines.md  first-time-maintainer.md  internal-change-guide.md  km-update-runbook.md  localize-sync-runbook.md  repository-transfer-checklist.md  security-and-permissions.md  translation-repository-bootstrap.md  workflow-templates.md
docs/sphinx/: conf.py  index.rst
examples/: translation-config.yml
examples/github-actions/: github_translation_import_template.yml  km_version_auto_update_template.yml  km_version_monitor_template.yml  localize_alignment_report_template.yml  localize_auto_sync_template.yml  localize_reviewed_migration_template.yml  localize_status_report_template.yml  translation_external_auto_sync_template.yml  validate_translation_config_template.yml
examples/translation-repository/: .gitignore  README.md
src/: ci_sync_commit.py  discover_km_versions.py  merge_localize_po.py  migrate_reviewed_to_localize.py  po_to_km.py  pull_km_bundle.py  pull_localize_po.py  report_alignment_status.py  report_localize_status.py  report_weblate_checks.py  sync_from_localize.py  sync_latest_km.py  validate_translation_config.py
src/dsw_km_translation_tool/: alignment_status.py  ci_sync.py  constants.py  github_translation_contributions.py  http_auth.py  km_bundle_sync.py  km_latest_sync.py  km_registry.py  layout.py  localize_sync.py  repository_ci_sync.py  shared_block_consistency.py  sync.py  translation_format.py  translation_repository_bootstrap.py  translation_repository_config.py  translation_repository_scaffold.py  tree.py  upstream_smoke.py  weblate_upload.py  workflow.py
src/dsw_translation_tool/: __init__.py  alignment_status.py  ci_sync.py  http_auth.py  km_bundle_sync.py  km_latest_sync.py  km_registry.py  km_version_promotion.py  layout.py  localize_merge.py  localize_migration.py  localize_status.py  localize_sync.py  localize_tree_sync.py  translation_repository_config.py  versioned_ci_sync.py  weblate_checks.py  workflow.py
tests/: conftest.py  helpers.py
tests/infra/: support.py  test_alignment_status.py  test_ci_sync.py  test_cli_export_tree.py  test_cli_po_to_km.py  test_cli_sync.py  test_cli_watch.py  test_github_translation_contributions.py  test_github_workflows.py  test_km_bundle_sync.py  test_km_latest_sync.py  test_km_registry.py  test_localize_merge.py  test_localize_migration.py  test_localize_status.py  test_localize_sync.py  test_localize_tree_sync.py  test_translation_format.py  test_translation_repository_bootstrap.py  (+5 more)
(+46 files in other folders)
